--- a/index.html
+++ b/index.html
@@ -2,39 +2,44 @@
 <html>
     <head>
         <meta charset=UTF-8">
+        <!-- Compiled and minified CSS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        <!-- Compiled and minified JavaScript -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
         <title>Wishlist</title>
     </head>
     <body>
-<div class="container">
-    <div class="row">
-        <div class="col s12">
-            <div id="main" class="card">
-                <div class="card-content">
-                    <span class="card-title">Task list</span>
-                    <div class="row">
-                        <form id="task-form" action="index.php">
-                            <div class="input-field col s12">
-                                <input type="text" name="task" id="task" value="">
-                                <label for="task">New task</label>
+        <div class="container">
+            <div class="row">
+                <div class="col s12">
+                    <div id="main" class="card">
+                        <div class="card-content">
+                            <span class="card-title">MA WISHLIST</span>
+                            <div class="row">
+                                <form id="task-form" action="index.php">
+                                    <div class="input-field col s12">
+                                        <input type="text" name="task" id="task" value="">
+                                        <label for="task">New task</label>
+                                    </div>
+                                    <input type="submit" value="Envoyer" class="btn orange lighten-3">
+                                </form>
                             </div>
-                            <input type="submit" value="Add Task" class="btn">
-                        </form>
+                        </div>
+                        <div class="card-action">
+                            <h6 id="task-title">Tasks</h6>
+                            <!--X<div class="input-field col s12">
+                            <input type="text" name="filter" id="filter" value="">
+                            <label for="filter">Filter tasks</label>
+                        </div>-->
+                            <ul class="collection"></ul>
+                            <a href="#" class="clear-tasks btn green lighten-3">Oups</a>
+                        </div>
                     </div>
-                </div>
-                <div class="card-action">
-                    <h5 id="task-title">Tasks</h5>
-                    <div class="input-field col s12">
-                        <input type="text" name="filter" id="filter" value="">
-                        <label for="filter">Filter tasks</label>
-                    </div>
-                    <ul class="collection"></ul>
-                    <a href="#" class="clear-tasks btn black">Clear tasks</a>
                 </div>
             </div>
         </div>
-    </div>
-</div>        
-<script src="wish-list.js"></script>
+        <script src="wish-list.js"></script>
     </body>
 </html>
