--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
                                 <form id="task-form" action="index.php">
                                     <div class="input-field col s12">
                                         <input type="text" name="task" id="task" value="">
-                                        <label for="task">New task</label>
+                                        <label for="task">New Wish</label>
                                     </div>
                                     <input type="submit" value="Envoyer" class="btn orange lighten-3">
                                 </form>
                             </div>
                         </div>
                         <div class="card-action">
-                            <h6 id="task-title">Tasks</h6>
-                            <!--X<div class="input-field col s12">
-                            <input type="text" name="filter" id="filter" value="">
-                            <label for="filter">Filter tasks</label>
-                        </div>-->
+                            <h6 id="task-title">Wishes</h6>
+                            <div class="input-field col s12">
+                            <!--<input type="text" name="filter" id="filter" value="">
+                            <label for="filter">Filter tasks</label>-->
+                        </div>
                             <ul class="collection"></ul>
                             <a href="#" class="clear-tasks btn green lighten-3">Oups</a>
                         </div>
